<resources>
    <string name="app_name">Shopping List</string>
    <string name="action_settings">Settings</string>
    <string name="action_details">Details</string>
    <string name="add_item">Add Item</string>
    <string name="enter_shopping_item">Enter Shopping Item</string>
    <string name="item"> Item</string>
    <string name="size"> Size</string>
    <string name="quantity"> Quantity</string>
    <string name="save">Save</string>
    <string name="shopping_item">Shopping Item</string>
    <string name="qty">Qty</string>
    <string name="date_added">Date Added</string>
    <string name="size_lbl">Size:</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirm_item_delete">Confirm item delete?</string>
    <string name="update">Update</string>
</resources>