<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/listRowCardView"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#03A9F4"
        app:cardCornerRadius="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:text="@string/shopping_item"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtSize"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="10dp"
                android:textAlignment="viewEnd"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/txtQty"
                app:layout_constraintTop_toBottomOf="@+id/txtQty" />

            <TextView
                android:id="@+id/txtQty"
                android:layout_width="46dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:text="@string/qty"
                android:textAlignment="viewEnd"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/btnEdit"
                app:layout_constraintTop_toTopOf="@+id/txtItem" />

            <TextView
                android:id="@+id/txtDateAdded"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_added"
                app:layout_constraintBottom_toBottomOf="@+id/txtSize"
                app:layout_constraintStart_toStartOf="@+id/txtItem" />

            <ImageButton
                android:id="@+id/btnEdit"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/roundcorner"
                android:src="@android:drawable/ic_menu_edit"
                app:layout_constraintEnd_toStartOf="@+id/btnDelete"
                app:layout_constraintTop_toTopOf="@+id/txtItem"
                app:tint="#009688" />

            <ImageButton
                android:id="@+id/btnDelete"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/roundcorner"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/btnEdit"
                app:srcCompat="@android:drawable/ic_delete" />

            <TextView
                android:id="@+id/lblSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/size_lbl"
                android:textAlignment="viewEnd"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/txtSize"
                app:layout_constraintEnd_toStartOf="@+id/txtSize" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>